--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,3 +1,7 @@
 {{ range . -}}
-    &nbsp; <a href="{{ .url }}" target="_blank" rel="noopener" title="{{ .name | humanize }}">{{ partial "svg.html" . }}</a> &nbsp;
+&nbsp;
+<a href="{{ .url }}" target="_blank" rel="me" title="{{ .name | humanize }}" referrerpolicy="no-referrer">
+    {{ partial "svg.html" . }}
+</a>
+&nbsp;
 {{- end -}}
